# Customizable_Logger

./: BuildAndRunLogger.bat  CMakeLists.txt  Main.cpp  README.md  log.json
Include/: CustomizableLogger.hpp
